first notebook draft

--- a/src/DAgger.ipynb
+++ b/src/DAgger.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In what follows we show how to do this step-by-step. First import the library:"
+    "In what follows we show how to do this step-by-step. First get the code from the [github repository](http://github.com/andreasvlachos/structured_imitation_demo) and import the library:"
    ]
   },
   {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -45,12 +45,21 @@
     "class POSInput(imitation.StructuredInput):\n",
     "    def __init__(self, tokens):\n",
     "        self.tokens = tokens  \n",
+    "    \n",
+    "    # this is just to help us print things\n",
+    "    def __str__(self):\n",
+    "        return \" \".join(self.tokens)\n",
     "\n",
     "class POSOutput(imitation.StructuredOutput):\n",
     "    def __init__(self, tags=None):\n",
     "        self.tags = []\n",
     "        if tags!=None:\n",
     "            self.tags = tags\n",
+    "            \n",
+    "    # this is just to help us print things\n",
+    "    def __str__(self):\n",
+    "        return \" \".join(self.tags)\n",
+    "            \n",
     "\n",
     "class POSInstance(imitation.StructuredInstance):\n",
     "    def __init__(self, tokens, tags=None):\n",
@@ -68,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -132,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -155,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -183,21 +192,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration:0, expert policy prob:1.0\n",
+      "I can fly\n",
+      "Pronoun Modal Verb\n",
+      "I can meat\n",
+      "Pronoun Modal Verb\n"
+     ]
+    }
+   ],
    "source": [
-    "    params.iterations = 1\n",
+    "params = POSTagger.params()\n",
+    "params.iterations = 1\n",
     "\n",
-    "    tagger.train(trainingInstances, params)\n",
+    "tagger.train(trainingInstances, params)\n",
     "\n",
-    "    print(tagger.labelEncoder.classes_)\n",
-    "    print(tagger.vectorizer.inverse_transform(tagger.model.coef_))\n",
+    "print(trainingInstances[0].input)\n",
+    "print(tagger.predict(trainingInstances[0]).to_output())\n",
+    "print(trainingInstances[1].input)\n",
+    "print(tagger.predict(trainingInstances[1]).to_output())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As expected, we cannot learn that \"can\" can have different tags depending on the context, but also we get another error that \"meat\" is tagged as a verb! This is happening because, even though we always saw \"meat\" only as a noun in our data, we also saw more instances of the tag \"Modal\" followed by a \"Verb\" tag. While this is a useful pattern to learn, we never encountered cases where the \"Modal\" tag is actually a mistake, since the training data labels are (typically) correct. In other words, we need to expose our model to incorrect predictions, so that it learns to recover from them. This is what we will do by adding a second iteration of DAgger, in which the roll-in will be with the classifier exclusively:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration:0, expert policy prob:1\n",
+      "Iteration:1, expert policy prob:0\n",
+      "I can fly\n",
+      "Pronoun Modal Verb\n",
+      "I can meat\n",
+      "Pronoun Modal Noun\n"
+     ]
+    }
+   ],
+   "source": [
+    "paramsImit = POSTagger.params()\n",
+    "paramsImit.iterations = 2\n",
+    "# The formula for probability of using the expert policy per iteration is (1-params.learningParam)^iteration_no\n",
+    "# iteration_no starts from 0, so 1 in the first iteration and 1-learningParam in the second one\n",
+    "paramsImit.learningParam = 1 \n",
     "\n",
-    "    print(tagger.predict(trainingInstances[0]).to_output())\n",
-    "    print(tagger.predict(trainingInstances[1]).to_output())\n"
+    "tagger.train(trainingInstances, paramsImit)\n",
+    "\n",
+    "print(trainingInstances[0].input)\n",
+    "print(tagger.predict(trainingInstances[0]).to_output())\n",
+    "print(trainingInstances[1].input)\n",
+    "print(tagger.predict(trainingInstances[1]).to_output())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The model now has learned to avoid the second mistake of tagging \"meat\" as a \"Verb\", thanks to the additional training data generated in the second generation of DAgger. Of course more features could have achieved this too, but we are unlikely to have the perfect classifier, so it is better to prepare it for its own mistakes.\n",
+    "\n",
+    "I intend to keep working on improving this tutorial and codebase to add the notion of roll-outs and training against non-decomposoable losses. If you see any mistakes, or you have any questions or requests, I would be more than happy to hear them: [a.vlachos@sheffield.ac.uk](mailto:a.vlachos@sheffield.ac.uk)."
    ]
   },
   {
@@ -206,7 +278,7 @@
    "source": [
     "### Acknowledgments\n",
     "\n",
-    "I have been working on imitation learning for structured prediction for many years with many great collaborators: Special thanks to Gerasimos Lampouras and Sebastian Riedel who worked with me on preparing the aforementioned EACL 2017 tutorial."
+    "I have been working on imitation learning for structured prediction for many years with many great collaborators. However, special thanks are due to Gerasimos Lampouras and Sebastian Riedel who worked with me on preparing the aforementioned EACL 2017 tutorial."
    ]
   }
  ],
